--- a/Site1.Master
+++ b/Site1.Master
@@ -11,28 +11,7 @@
     <link rel="stylesheet" type="text/css" href="insideTabStyle.css" />
     <link rel="stylesheet" type="text/css" href="JQ/jQueryAlertDialogs/jquery.alerts.css" />
 
-    <link rel="STYLESHEET" type="text/css" href="DHTMLX/dhtmlxCombo/codebase/dhtmlxcombo.css">
-
-
-    <!-- Ye Olde PortCompass Date Widget 
-    <SCRIPT LANGUAGE="JavaScript" SRC="CALPOP3.js"></SCRIPT>
-    <SCRIPT LANGUAGE="JavaScript">
-    var CALP = new CalendarPopup();
-    </SCRIPT>
-    -->
-
-
-
-
-<!-- JQUERY old -->
-<!--
-   <link type="text/css" href="JQ/css/custom-theme/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
-	<script type="text/javascript" src="JQ/js/jquery-1.3.2.min.js"></script>
-	<script type="text/javascript" src="JQ/js/jquery-ui-1.7.2.custom.min.js"></script>
-   <script type="text/javascript">
-	    $JQ = jQuery.noConflict();
-   </script>
--->
+    <link rel="STYLESHEET" type="text/css" href="DHTMLX/dhtmlxCombo/codebase/dhtmlxcombo.css"/>
 
 
 
